force-app/main/default/objects/RR_Counter__c/RR_Counter__c.object-meta.xml
<CustomObject>
    <label>Round Robin Counter</label>
    <nameField>
        <label>Counter Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Round Robin Counters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>