force-app/main/default/objects/RR_Counter__c/fields/Current_Index__c.field-meta.xml
<CustomField>
    <fullName>Current_Index__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Tracks the current index position in the round-robin rotation</description>
    <inlineHelpText>Current position in the user rotation (starts at 0)</inlineHelpText>
    <label>Current Index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>