force-app/main/default/objects/RR_Counter__c/fields/Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Group_Name__c</fullName>
    <description>Identifies which round-robin group this counter belongs to</description>
    <inlineHelpText>Name of the round-robin group (e.g., EDD_Lead_Assignment)</inlineHelpText>
    <label>Group Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>