force-app/main/default/objects/RR_Counter__c/fields/Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Last_Updated__c</fullName>
    <description>Timestamp of the last round-robin assignment</description>
    <inlineHelpText>When this counter was last used for assignment</inlineHelpText>
    <label>Last Updated</label>
    <type>DateTime</type>
</CustomField>